Norm/data/corpus/corpus1436703.txt
Question (ID-1436703): Difference between __str__ and __repr__ in Python What is the difference between __str__ and __repr__ in Python? 
 Answers (Total-6): #0 Alex summarized well but, surprisingly, was too succinct. 

 First, let me reiterate the main points in Alex’s post: 

 
 The default implementation is useless (it’s hard to think of one which wouldn’t be, but yeah) 
 __repr__ goal is to be unambiguous 
 __str__ goal is to be readable 
 Container’s __str__ uses contained objects’ __repr__ 
 

 Default implementation is useless 

 This is mostly a surprise because Python’s defaults tend to be fairly useful. However, in this case, having a default for __repr__ which would act like: 

 return “%s(%r)” % (self.__class__, self.__dict__)*
 

 would have been too dangerous (for example, too easy to get into infinite recursion if objects reference each other). So Python cops out. Note that there is one default which is true: if __repr__ is defined, and __str__ is not, the object will behave as though __str__=__repr__ . 

 This means, in simple terms: almost every object you implement should have a functional __repr__ that’s usable for understanding the object. Implementing __str__ is optional: do that if you need a “pretty print” functionality (for example, used by a report generator). 

 The goal of __repr__ is to be unambiguous 

 Let me come right out and say it — I do not believe in debuggers. I don’t really know how to use any debugger, and have never used one seriously. Furthermore, I believe that the big fault in debuggers is their basic nature — most failures I debug happened a long long time ago, in a galaxy far far away. This means that I do believe, with religious fervor, in logging. Logging is the lifeblood of any decent fire-and-forget server system. Python makes it easy to log: with maybe some project specific wrappers, all you need is a 

 log(INFO, “I am in the weird function and a is”, a, “and”, b, “is”, b, “but I got a null C — using default”, default_c)
 

 But you have to do the last step — make sure every object you implement has a useful repr, so code like that can just work. This is why the “eval” thing comes up: if you have enough information so “ eval(repr(c))==c ”, that means you know everything there is to know about c. If that’s easy enough, at least in a fuzzy way, do it. If not, make sure you have enough information about c anyway. I usually use an eval-like format: “MyClass(this=%r,that=%r)” % (self.this,self.that). It does not mean that you can actually construct MyClass, or that those are the right constructor arguments — but it is a useful form to express “this is everything you need to know about this instance”. 

 Note: I used %r above, not %s. You always want to use repr() [or %r formatting character, equivalently] inside repr implementation, or you’re defeating the goal of repr. You want to be able to differentiate MyClass(3) and MyClass(“3″). 

 The goal of __str__ is to be readable 

 Specifically, it is not intended to be unambiguous — notice that str(3)==str(“3″) . Likewise, if you implement an IP abstraction, having the str of it look like 192.168.1.1 is just fine. When implementing a date/time abstraction, the str can be “2010/4/12 15:35:22″, etc. The goal is to represent it in a way that a user, not a programmer, would want to read it. Chop off useless digits, pretend to be some other class — as long is it supports readability, it is an improvement. 

 Container’s __str__ uses contained objects’ __repr__ 

 This seems surprising, doesn’t it? It is a little, but how readable would 

 [moshe is, 3, hello
world, this is a list, oh I don't know, containing just 4 elements]
 

 be? Not very. Specifically, the strings in a container would find it way too easy to disturb its string representation. In the face of ambiguity, remember, Python resists the temptation to guess. If you want the above behavior when you’re printing a list, just 

 print “["+", ".join(l)+"]“
 

 (you can probably also figure out what to do about dictionaries. 

 Summary 

 Implement __repr__ for any class you implement. This should be second nature. Implement __str__ if you think it would be useful to have a string version which errs on the side of more readability in favor of more ambiguity. 
 #1  __repr__ : representation of python object usually eval will convert it back to that object 

 __str_ _ : is whatever you think is that object in text form 

 e.g. 

 &gt;&gt;&gt; s="""w'o"w"""
&gt;&gt;&gt; repr(s)
'\'w\\\'o"w\''
&gt;&gt;&gt; str(s)
'w\'o"w'
&gt;&gt;&gt; eval(str(s))==s
Traceback (most recent call last):
 File "&lt;stdin&gt;", line 1, in &lt;module&gt;
 File "&lt;string&gt;", line 1
 w'o"w
  ^
SyntaxError: EOL while scanning single-quoted string
&gt;&gt;&gt; eval(repr(s))==s
True
 
 #2 Unless you specifically act to ensure otherwise, most classes don't have helpful results for either: 

 &gt;&gt;&gt; class Sic(object): pass
... 
&gt;&gt;&gt; print str(Sic())
&lt;__main__.Sic object at 0x8b7d0&gt;
&gt;&gt;&gt; print repr(Sic())
&lt;__main__.Sic object at 0x8b7d0&gt;
&gt;&gt;&gt;
 

 As you see -- no difference, and no info beyond the class and object's id . If you only override one of the two...: 

 &gt;&gt;&gt; class Sic(object): 
... def __repr__(object): return 'foo'
... 
&gt;&gt;&gt; print str(Sic())
foo
&gt;&gt;&gt; print repr(Sic())
foo
&gt;&gt;&gt; class Sic(object):
... def __str__(object): return 'foo'
... 
&gt;&gt;&gt; print str(Sic())
foo
&gt;&gt;&gt; print repr(Sic())
&lt;__main__.Sic object at 0x2617f0&gt;
&gt;&gt;&gt;
 

 as you see, if you override __repr__ , that's ALSO used for __str__ , but not vice versa. 

 Other crucial tidbits to know: __str__ on a built-on container uses the __repr__ , NOT the __str__ , for the items it contains. And, despite the words on the subject found in typical docs, hardly anybody bothers making the __repr__ of objects be a string that eval may use to build an equal object (it's just too hard, AND not knowing how the relevant module was actually imported makes it actually flat out impossible). 

 So, my advice: focus on making __str__ reasonably human-readable, and __repr__ as unambiguous as you possibly can, even if that interferes with the fuzzy unattainable goal of making __repr__ 's returned value acceptable as input to __eval__ ! 
 #3 My rule of thumb: __repr__ is for developers, __str__ is for customers. 
 #4 From http://pyref.infogami.com/%5F%5Fstr%5F%5F by effbot: 

 __str__ "computes the "informal" string representation of an object. This differs from __repr__ in that it does not have to be a valid Python expression: a more convenient or concise representation may be used instead." 
 #5 This mailing list archive gives a nice view